--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "husky": "^8.0.3",
     "lint-staged": "^13.2.0",
     "nuxt": "^3.2.3",
-    "prettier": "^2.8.4"
+    "prettier": "^2.8.4",
+    "sass": "^1.59.2"
   }
 }
