--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     ]
   },
   "devDependencies": {
+    "@iconify-icons/tabler": "^1.2.67",
+    "@iconify/vue": "^4.1.0",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
     "@typescript-eslint/parser": "^5.54.1",
     "eslint": "^8.36.0",
