--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "nuxt": "^3.2.3",
     "prettier": "^2.8.4",
     "sass": "^1.59.2"
+  },
+  "dependencies": {
+    "@vercel/analytics": "^0.1.11"
   }
 }
